kustomize/base/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: nodejs-api
  name: nodejs-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: nodejs-api
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: nodejs-api
        image: 172.30.1.1:5000/workshop-sit/nodejs-api:1.1.0
        imagePullPolicy: Always
        name: nodejs-api
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/node/app/logs
          name: nodejs-api-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nodejs-api-storage
        persistentVolumeClaim:
          claimName: nodejs-api-pvc
  test: false
  triggers:
  - type: ConfigChange
