kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-api
  name: nodejs-api
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-api
  sessionAffinity: None
  type: ClusterIP
