kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-api
  name: nodejs-api
spec:
  host: nodejs-api-workshop-sit.127.0.0.1.nip.io
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: nodejs-api
    weight: 100
  wildcardPolicy: None
